ajuste de swagger de votscion #4 y creacion de  ontrolador para script #7
